adding some file

--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
             <a class="design-link" href="https://youtube.com" target="_blank">Let's Chat</a>
     </div>
 </section>
-<!------------------------footer area------------------------------------------------
+<!------------------------footer area------------------------------------------------>
   
         <h5>stay connected</h5>
         <h4>hello@design.com</h4>
-<footer> 
-    <div><img src="images/images 6.png"></div>
-
-</footer>
-    
-</body>
-</html>
+   <section class="containar">
+       <div class="hello"><img src="images/image 6.png" alt="">
+        <img src="images/image 9.png" alt="">
+       <img src="images/image 7.png" alt="">
+    </div>
+   </section>     
