--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             standard dummy text ever since the 1500s, when an unknown <br>
             printer took a galley of type  and scrambled it to make a type<br> specimen book.
         </P>
-        <a  class="design-link  fa fa-download"      href="https://www.prothomalo.com" target="_blank">DOWNLOAD CV</a> 
+        <a  class="design-link   fa fa-download"      href="https://www.prothomalo.com" target="_blank"> DOWNLOAD CV</a> 
     </div>
 </section>
 <!-----------------------------------lastet area------------------------------------------------------>
@@ -73,7 +73,7 @@
   
         <h5>stay connected</h5>
         <h4>hello@design.com</h4>
-   <section class="containar">
+   <section>
        <div class="hello"><img src="images/image 6.png" alt="">
         <img src="images/image 9.png" alt="">
        <img src="images/image 7.png" alt="">
